--- a/style.css
+++ b/style.css
@@ -1,7 +1,36 @@
 body{
+    font-family: 'Montserrat', sans-serif;
     font-family: 'Poppins', sans-serif;
+    color: rgb(68, 62, 62);
 }
 section{
     display: flex;
-    flex-direction: row;
+   
+}
+h1{
+    font-size:  40px;
+    margin-top: 90px ;
+    margin-bottom: 30px ;
+    
+}
+.orange{
+    color: orange;
+}
+.half-width{
+   width: 50%;
+   padding-left: 5%;
+}
+.half-width img{
+    width: 80%;
+}
+.link-button{
+    text-decoration: none;
+    padding: 10px 30px;
+    border-radius: 30px;
+    background-image: linear-gradient(orange,red);
+    color: white;
+    font-weight: 500;
+}
+#margin{
+    margin-bottom: 50px;
 }
